mdapi_output_dir/objects/Store_Owner__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <label>Store Owner</label>
    
    <nameField>
        
        <label>Store Owner Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    
    <pluralLabel>Store Owners</pluralLabel>
    
    
    <sharingModel>ControlledByParent</sharingModel>
    
    
<fields>
        
    <fullName>Email__c</fullName>
        
    <caseSensitive>true</caseSensitive>
        
        
    <label>Email</label>
        
        
        
        
    <type>Email</type>
        
    <unique>true</unique>
        
</fields>
    <fields>
        
    <fullName>First_Name__c</fullName>
        
        
    <label>First Name</label>
        
    <length>20</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Last_Name__c</fullName>
        
        
    <label>Last Name</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Phone__c</fullName>
        
        
    <label>Phone</label>
        
        
        
        
    <type>Phone</type>
        
</fields>
    <fields>
        
    <fullName>Store__c</fullName>
        
        
    <label>Store</label>
        
    <referenceTo>Store__c</referenceTo>
        
    <relationshipLabel>Store Owner</relationshipLabel>
        
    <relationshipName>Store_Owners</relationshipName>
        
    <relationshipOrder>0</relationshipOrder>
        
        
        
        
    <type>MasterDetail</type>
        
        
</fields>
    <listViews>
        
    <fullName>All</fullName>
        
    <filterScope>Everything</filterScope>
        
    <label>All</label>
        
</listViews>
</CustomObject>